compiler-core/src/parse/snapshots/rakun_core__parse__tests__html_with_comments.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n   <div>\n       { \n            // This is a comment\n       }\n       <span>Hello, world!</span>\n   </div>\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 123,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 121,
                                    },
                                    tag: None,
                                    content: [
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 25,
                                                end: 33,
                                            },
                                            value: "\n       ",
                                        },
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 77,
                                                end: 85,
                                            },
                                            value: "\n       ",
                                        },
                                        Html {
                                            location: SrcSpan {
                                                start: 85,
                                                end: 111,
                                            },
                                            tag: None,
                                            content: [
                                                HtmlText {
                                                    location: SrcSpan {
                                                        start: 91,
                                                        end: 104,
                                                    },
                                                    value: "Hello, world!",
                                                },
                                            ],
                                            arguments: [],
                                        },
                                        HtmlText {
                                            location: SrcSpan {
                                                start: 111,
                                                end: 115,
                                            },
                                            value: "\n   ",
                                        },
                                    ],
                                    arguments: [],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [
            SrcSpan {
                start: 50,
                end: 68,
            },
        ],
        empty_lines: [],
        new_lines: [
            0,
            16,
            35,
            68,
            121,
            123,
        ],
    },
}
