compiler-core/src/parse/snapshots/rakun_core__parse__tests__inner_single_quote_parses.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 847
expression: "\nlet a = \"inner 'quotes'\"\n"
---
[
    Assignment(
        Assignment {
            location: SrcSpan {
                start: 1,
                end: 25,
            },
            value: String {
                location: SrcSpan {
                    start: 9,
                    end: 25,
                },
                value: "inner 'quotes'",
            },
            pattern: Variable {
                location: SrcSpan {
                    start: 5,
                    end: 6,
                },
                name: "a",
                type_: (),
            },
            kind: Let,
            annotation: None,
        },
    ),
]
