compiler-core/src/parse/snapshots/rakun_core__parse__tests__invalid_label_shorthand_3.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1291
expression: "\npub fn main() {\n  wibble(:arg)\n}\n"
---
----- SOURCE CODE

pub fn main() {
  wibble(:arg)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:10
  │
3 │   wibble(:arg)
  │          ^ I was not expecting this

Found `:`, expected one of: 
- `)`
