compiler-core/src/parse/snapshots/rakun_core__parse__tests__invalid_pattern_label_shorthand_2.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  let Wibble(:arg) = todo\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:3:14
  │
3 │   let Wibble(:arg) = todo
  │              ^ I was not expecting this

Found `:`, expected one of: 
- `)`
