compiler-core/src/parse/snapshots/rakun_core__parse__tests__list_spread_followed_by_extra_items.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() -> Nil {\n  let xs = [1, 2, 3]\n  [1, 2, ..xs, 3 + 3, 4]\n}\n"
---
----- SOURCE CODE

pub fn main() -> Nil {
  let xs = [1, 2, 3]
  [1, 2, ..xs, 3 + 3, 4]
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:4:10
  │
4 │   [1, 2, ..xs, 3 + 3, 4]
  │          ^^^^ I wasn't expecting elements after this

Lists are immutable and singly-linked, so to append items to them
all the elements of a list would need to be copied into a new list.
This would be slow, so there is no built-in syntax for it.

Hint: prepend items to the list and then reverse it once you are done.
