compiler-core/src/parse/snapshots/rakun_core__parse__tests__multiple_internal_attributes.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 645
expression: "\n@internal\n@internal\npub fn main() -> Nil {\n  Nil\n}\n"
---
----- SOURCE CODE

@internal
@internal
pub fn main() -> Nil {
  Nil
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:1
  │
3 │ @internal
  │ ^^^^^^^^^ Duplicate attribute

This attribute has already been given.
